# serial_rs

./: Cargo.toml  README.md
src/: errors.rs  lib.rs  ports.rs  ports_io.rs  structs.rs  utils.rs
tests/: port_io_tests.rs  port_tests.rs
